4.08 2014-11-01

    [ DOCUMENTATION ]
    - note that calling headers without a -charset may lead to a nonsensical
      charset being added to certain content types due to the default and the
      workaround
    - remove documentation stating that calls to escapeHTML with a changed
      charset force numeric encoding of all characters, because that does not
      happen

4.07 2014-10-12

    [ RELEASE NOTES ]
    - please see changes for v4.05

    [ TESTING ]
    - typo and POD fixes, add test to check POD and compiles

4.06 2014-10-10

    [ RELEASE NOTES ]
    - please see changes for v4.05

    [ DOCUMENTATION ]
    - make warning on list context call of ->param more lenient and don't
      warn if called with no arguments

4.05 2014-10-08

    [ RELEASE NOTES ]
    - this release includes *significant* refactoring of temporary file
      handling in CGI.pm. See "Changes in temporary file handling" in perldoc

    - this release adds a warning for when the param method is called
      in list context, see the Warning in the perldoc for the section
      "Fetching the value or values of a single named parameter" for why
      this has been added and how to disable this warning

    [ DOCUMENTATION ]
    - change AUTHOR INFORMATION to LICENSE to please Kwalitee

    [ TESTING ]
    - t/arbitrary_handles.t to check need for patch in RT #54055, it
      turns out there is no need - the first argument to CGI->new can
      be an arbitrary handle
    - add test case for incorrect unescaping of redirect headers
      (RT #61120)
    - add tests for the handle method (RT #85074, thanks to TONYC@cpan.org)

    [ SPEC / BUG FIXES ]
    - don't set binmode on STDOUT/STDERR/STDIN if a none standard layer
      is already set on them on none UNIX platforms (RT #57524)
    - make XForms:Model data accesible through POSTDATA/PUTDATA param
      (RT #75628)
    - prevent corruption of POSTDATA/PUTDATA when -utf8 flag is used and use