@@ -2947,7 +2947,13 @@ sub url {
 
     my $uri         =  $rewrite && $request_uri ? $request_uri : $script_name;
     $uri            =~ s/\?.*$//s; # remove query string
-    $uri            =~ s/\Q$ENV{PATH_INFO}\E$// if defined $ENV{PATH_INFO};
+
+	if ( defined( $ENV{PATH_INFO} ) ) {
+		# IIS sometimes sets PATH_INFO to the same value as SCRIPT_NAME so only sub it out
+		# if SCRIPT_NAME isn't defined or isn't the same value as PATH_INFO
+    	$uri =~ s/\Q$ENV{PATH_INFO}\E$//
+			if ( ! defined( $ENV{SCRIPT_NAME} ) or $ENV{PATH_INFO} ne $ENV{SCRIPT_NAME} );
+	}
 
     if ($full) {
         my $protocol = $self->protocol();
